[gd_scene load_steps=20 format=2]

[ext_resource path="res://actor/space_ships/player/spaceship_player.png" type="Texture" id=1]
[ext_resource path="res://actor/compents/laser/timed_laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor/compents/bomb_hatch.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor/space_ships/player/player_ship.gd" type="Script" id=4]
[ext_resource path="res://actor/compents/nitro.tscn" type="PackedScene" id=5]
[ext_resource path="res://theme/button/button.png" type="Texture" id=6]
[ext_resource path="res://actor/space_ships/player/ship_engine_1.wav" type="AudioStream" id=7]
[ext_resource path="res://actor/compents/laser/laser_travis.wav" type="AudioStream" id=8]
[ext_resource path="res://actor/space_ships/player/spot.png" type="Texture" id=9]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.305882 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="InputEventAction" id=4]
action = "laser"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "bomb"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "nitro"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[node name="PlayerShip" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource( 4 )
velocity = Vector2( 200, 0 )
acceleration = 1.8
de_acceleration = 0.1
speed = 200.0
rotation_accel = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Nitro" parent="." instance=ExtResource( 5 )]
position = Vector2( -5, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, 0 )
texture = ExtResource( 1 )

[node name="BombHatch" parent="." instance=ExtResource( 3 )]
position = Vector2( -6, 0 )

[node name="Engine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true
max_distance = 400.0

[node name="CircleLight" type="Light2D" parent="."]
texture = ExtResource( 9 )
energy = 0.4

[node name="FlashLight" type="Light2D" parent="."]
visible = false
position = Vector2( 77, 0 )
texture = ExtResource( 9 )
energy = 0.4

[node name="TimedLaser" parent="." instance=ExtResource( 2 )]
position = Vector2( 5, 0 )

[node name="RayCast2D" parent="TimedLaser" index="0"]
cast_to = Vector2( 256, 0 )

[node name="Line2D" parent="TimedLaser" index="1"]
gradient = SubResource( 2 )

[node name="ActiveTimer" parent="TimedLaser" index="2"]
wait_time = 1.45

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TimedLaser"]
stream = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Virtual joystick" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false
anchor_top = 0.0
anchor_right = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
joystick_mode = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Laser" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 432, 216 )
normal = ExtResource( 6 )
shape = SubResource( 3 )
action = "laser"
visibility_mode = 1

[node name="Bomb" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 400, 248 )
normal = ExtResource( 6 )
shape = SubResource( 3 )
action = "bomb"
visibility_mode = 1

[node name="Nitro" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 472, 192 )
normal = ExtResource( 6 )
shape = SubResource( 3 )
action = "nitro"
visibility_mode = 1

[node name="Move" type="Node2D" parent="CanvasLayer"]
position = Vector2( 39.389, 220.447 )

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/Move"]
position = Vector2( -32, 0 )
normal = ExtResource( 6 )
shape = SubResource( 3 )
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/Move"]
position = Vector2( 32, 0 )
normal = ExtResource( 6 )
shape = SubResource( 3 )
action = "move_right"
visibility_mode = 1

[node name="Up" type="TouchScreenButton" parent="CanvasLayer/Move"]
position = Vector2( 0, -32 )
normal = ExtResource( 6 )
shape = SubResource( 3 )
action = "move_up"
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="CanvasLayer/Move"]
position = Vector2( 0, 32 )
normal = ExtResource( 6 )
shape = SubResource( 3 )
action = "move_down"
visibility_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laser" type="Button" parent="CanvasLayer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.286275 )
margin_left = 175.0
margin_right = 226.0
margin_bottom = 20.0
focus_mode = 0
shortcut = SubResource( 5 )
text = "laser(Z)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bomb" type="Button" parent="CanvasLayer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.286275 )
margin_left = 230.0
margin_right = 282.0
margin_bottom = 20.0
focus_mode = 0
shortcut = SubResource( 7 )
text = "bomb(x)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nitro" type="Button" parent="CanvasLayer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.286275 )
margin_left = 286.0
margin_right = 336.0
margin_bottom = 20.0
focus_mode = 0
shortcut = SubResource( 9 )
text = "nitro(c)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="CanvasLayer/HBoxContainer/Laser" to="." method="_on_Laser_button_down"]
[connection signal="button_up" from="CanvasLayer/HBoxContainer/Laser" to="." method="_on_Laser_button_up"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Bomb" to="." method="_on_Bomb_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Nitro" to="." method="_on_Nitro_pressed"]

[editable path="TimedLaser"]
